# visual_question_answering

./: .gitignore  AnswersPreprocessing.ipynb  EDA.ipynb  ImagePreprocessing.ipynb  InitialDataset.ipynb  Model.ipynb  Preprocessing.ipynb  QuestionPreprocessing.ipynb  README.md  pyproject.toml
data/: ocr.csv  test.json  train.json
files/: test_answers.csv
model/: keras_metadata.pb  saved_model.pb
model/variables/: variables.index
