[tool.poetry]
name = "visual_question_answering"
version = "0.1.0"
description = ""
authors = ["Eva Janković, Tamara Ranković"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
notebook = "^6.4.11"
jupyter = "^1.0.0"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
scikit-learn = "^1.1.1"
keras = "^2.9.0"
torchvision = "^0.12.0"
transformers = "^4.19.2"
torch = "^1.11.0"
tensorflow = "^2.9.1"
nltk = "^3.7"
h5py = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
